<resources>
    <string name="app_name">My Calc</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">&#xD7;</string>
    <string name="Divide">&#247;</string>
    <string name="Equals">=</string>
    <string name="Comma">.</string>
    <string name="LeftBrace">(</string>
    <string name="RightBrace">)</string>
    <string name="Clear">Clear</string>
</resources>